--- a/auth-server/auth-server-web/src/main/webapp/WEB-INF/resources/view/error/account_unknown.html
+++ b/auth-server/auth-server-web/src/main/webapp/WEB-INF/resources/view/error/account_unknown.html
@@ -41,6 +41,7 @@
                 <!-- Advanced login -->
 
                 <input id="openId" style="display: none" value="$openId">
+                <input id="callBackUrl" style="display: none" value="$callBackUrl">
 
                 <div class="panel panel-body login-form">
                     <div class="text-center">
