--- a/auth-server/auth-server-web/src/main/webapp/WEB-INF/resources/view/index.html
+++ b/auth-server/auth-server-web/src/main/webapp/WEB-INF/resources/view/index.html
@@ -14,6 +14,7 @@
     <link href="/css/minified/colors.min.css" rel="stylesheet" type="text/css">
     <link href="/css/bootstrap-table.css" rel="stylesheet" type="text/css">
     <link href="/css/style.css" rel="stylesheet" type="text/css">
+
     <title>用户权限管理平台</title>
 </head>
 <body class="navbar-top"  v-cloak>
@@ -34,28 +35,28 @@
             </ul>
 
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="#">Text link</a></li>
+                <!--<li><a href="#">Text link</a></li>-->
 
-                <li>
-                    <a href="#">
-                        <i class="icon-cog3"></i>
-                        <span class="visible-xs-inline-block position-right">Icon link</span>
-                    </a>
-                </li>
+                <!--<li>-->
+                    <!--<a href="#">-->
+                        <!--<i class="icon-cog3"></i>-->
+                        <!--<span class="visible-xs-inline-block position-right">Icon link</span>-->
+                    <!--</a>-->
+                <!--</li>-->
 
                 <li class="dropdown dropdown-user">
                     <a class="dropdown-toggle" data-toggle="dropdown">
-                        <img src="/images/placeholder.jpg" alt="">
-                        <span>Victoria</span>
+                        <img class="figureUrl" src="/images/placeholder.jpg" alt="">
+                        <span class="userNick" ></span>
                         <i class="caret"></i>
                     </a>
                     <ul class="dropdown-menu dropdown-menu-right">
-                        <li><a href="#"><i class="icon-user-plus"></i> My profile</a></li>
+                       <!-- <li><a href="#"><i class="icon-user-plus"></i> My profile</a></li>
                         <li><a href="#"><i class="icon-coins"></i> My balance</a></li>
                         <li><a href="#"><span class="badge badge-warning pull-right">58</span> <i class="icon-comment-discussion"></i> Messages</a></li>
                         <li class="divider"></li>
-                        <li><a href="#"><i class="icon-cog5"></i> Account settings</a></li>
-                        <li><a href="#"><i class="icon-switch2"></i> Logout</a></li>
+                        <li><a href="#"><i class="icon-cog5"></i> Account settings</a></li>-->
+                        <li><a href="/logout"><i class="icon-switch2"></i>退出</a></li>
                     </ul>
                 </li>
             </ul>
@@ -77,23 +78,15 @@
                         <div class="category-content  dropdown dropdown-user">
                             <a class="dropdown-toggle" data-toggle="dropdown">
                                 <div class="media">
-                                    <a href="#" class="media-left"><img src="/images/placeholder.jpg" class="img-circle img-sm" alt=""></a>
+                                    <a href="#" class="media-left"><img src="/images/placeholder.jpg" class="figureUrl img-circle img-sm" alt=""></a>
                                     <div class="media-body">
-                                        <span class="media-heading text-semibold">测试用户</span>
-                                        <div class="text-size-mini text-muted">
-                                            <i class="icon-user text-size-small"></i> &nbsp;超级管理员
-                                        </div>
+                                        <span class="userNick" class="media-heading text-semibold"></span>
+                                        <!--<div class="text-size-mini text-muted">-->
+                                            <!--<i class="icon-user text-size-small"></i> &nbsp;超级管理员-->
+                                        <!--</div>-->
                                     </div>
                                 </div>
                             </a>
-                            <ul class="dropdown-menu dropdown-menu-right">
-                                <li><a href="#"><i class="icon-user-plus"></i> My profile</a></li>
-                                <li><a href="#"><i class="icon-coins"></i> My balance</a></li>
-                                <li><a href="#"><span class="badge badge-warning pull-right">58</span> <i class="icon-comment-discussion"></i> Messages</a></li>
-                                <li class="divider"></li>
-                                <li><a href="#"><i class="icon-cog5"></i> Account settings</a></li>
-                                <li><a href="#"><i class="icon-switch2"></i> Logout</a></li>
-                            </ul>
                         </div>
                     </div>
                     <!-- /user menu -->
@@ -102,32 +95,34 @@
                     <!-- Main navigation -->
                     <div class="sidebar-category sidebar-category-visible">
                         <div class="category-content no-padding">
-                            <ul id="menu" class="navigation navigation-main navigation-accordion">
-                                <!--<template :item="item" v-for="item in menuList">-->
-                                    <!--<li class="navigation-header">-->
-                                        <!--<span>{{item.name}}</span>-->
+                            <ul id="side-menu" class="navigation navigation-main navigation-accordion">
+                                <!--<li class="headerMenu">-->
+                                    <!--<a href="#"><i class="icon-user"></i><span>用户</span></a>-->
+                                    <!--<ul>-->
+                                        <!--<li class="subMenu" ><a url="/user/list" href="javascript:;"><span>用户管理</span></a></li>-->
+                                        <!--<li class="subMenu"><a url="/auth/list" href="javascript:;"><span>用户权限分配</span></a></li>-->
+                                        <!--<li class="subMenu"><a url="/session/list" href="javascript:;"><span>在线用户管理</span></a></li>-->
+                                    <!--</ul>-->
+                                <!--</li>-->
 
-                                    <!--</li>-->
-                                    <!--<template :item="sub" v-for="sub in item.list">-->
-                                        <!--<li class="subMenu"><a :href="'#'+sub.url"><i class="icon-user"></i> <span>{{sub.name}}</span></a></li>-->
-                                    <!--</template>-->
+                                <!--<li class="headerMenu">-->
+                                    <!--<a href="#"><i class="icon-unlocked"></i><span>权限</span></a>-->
+                                    <!--<ul>-->
+                                        <!--<li class="subMenu"><a url="/role/list" href="javascript:;"><span>角色管理</span></a></li>-->
+                                        <!--<li class="subMenu"><a url="/resource/resourceDistri" href="javascript:;"><span>角色资源分配</span></a></li>-->
+                                        <!--<li class="subMenu"><a url="/resource/list" href="javascript:;"><span>资源管理</span></a></li>-->
+                                    <!--</ul>-->
+                                <!--</li>-->
 
-                                <!--</template>-->
-                                <!--<menu-item :item="item" v-for="item in menuList">-->
-                                <!--</menu-item>-->
 
-                                <!--&lt;!&ndash; Main &ndash;&gt;-->
-                                <!--<li class="navigation-header"><span>用户</span> <i class="icon-menu" title="用户"></i></li>-->
-                                <!--<li><a href="/user/list"><i class="icon-user"></i> <span>用户管理</span></a></li>-->
-                                <!--<li><a href="/auth/list"><i class="icon-user"></i> <span>用户权限分配</span></a></li>-->
-                                <!--&lt;!&ndash;<li><a href="#"><i class="icon-user-check"></i> <span>登录用户查看</span></a></li>&ndash;&gt;-->
-                                <!--&lt;!&ndash;<li><a href="#"><i class="icon-user-plus"></i> <span>用户身份切换</span></a></li>&ndash;&gt;-->
+                                <!--<li class="headerMenu">-->
+                                    <!--<a href="#"><i class="icon-briefcase"></i><span>应用</span></a>-->
+                                    <!--<ul>-->
+                                        <!--<li class="subMenu"><a url="/app/list" href="javascript:;"><span>应用管理</span></a></li>-->
+                                    <!--</ul>-->
+                                <!--</li>-->
 
-                                <!--<li class="navigation-header"><span>权限</span> <i class="icon-menu" title="权限"></i></li>-->
-                                <!--<li><a href="/role/list"><i class="icon-price-tags"></i> <span>角色管理</span></a></li>-->
-                                <!--<li><a href="/resource/list"><i class="icon-menu"></i> <span>资源管理</span></a></li>-->
-                                <!--<li class="navigation-header"><span>应用</span> <i class="icon-menu" title="应用"></i></li>-->
-                                <!--<li><a href="/app/list"><i class="icon-dropbox"></i> <span>应用管理</span></a></li>-->
+
                             </ul>
                         </div>
                     </div>
@@ -147,6 +142,7 @@
 <script src="/js/lib/bootstrap.min.js"></script>
 <script src="/js/lib/contabs.min.js"></script>
 <script src="/js/lib/router.js"></script>
+
 <script src="/js/lib/app_new.js"></script>
 <script src="/js/index.js?_44455445522998732334444"></script>
 
