--- a/auth-server/auth-server-web/src/main/webapp/WEB-INF/resources/view/role/role.html
+++ b/auth-server/auth-server-web/src/main/webapp/WEB-INF/resources/view/role/role.html
@@ -21,12 +21,15 @@
     <script src="/js/lib/bootstrap.min.js"></script>
     <script src="/js/lib/x-editable.js"></script>
     <script src="/js/lib/bootstrap-table.min.js"></script>
+    <script src="/js/lib/bootstrap-table-mobile.js"></script>
     <script src="/js/lib/blockui.min.js"></script>
     <script src="/js/lib/bootbox.min.js"></script>
     <script src="/js/lib/sweet_alert.min.js"></script>
     <script src="/js/lib/select2.min.js"></script>
     <script src="/js/common.js"></script>
     <script src="/js/service/role.js"></script>
+
+
 </head>
 <body >
 <div class="content">
@@ -124,12 +127,7 @@
                             <input type="text" id="appId" placeholder="所属应用">
                         </div>
                     </div>
-                    <div class="form-group">
-                        <label class="control-label col-sm-3">选择资源</label>
-                        <div class="col-sm-9">
-                            <input type="text" id="resourceIds" placeholder="选择资源">
-                        </div>
-                    </div>
+
                     <div class="form-group">
                         <label class="control-label col-sm-3">备注</label>
                         <div class="col-sm-9">
@@ -170,12 +168,7 @@
                             <input type="text" id="add-appId" placeholder="所属应用">
                         </div>
                     </div>
-                    <div class="form-group">
-                        <label class="control-label col-sm-3">选择资源</label>
-                        <div class="col-sm-9">
-                            <input type="text" id="add-resourceIds" placeholder="选择资源">
-                        </div>
-                    </div>
+
                     <div class="form-group">
                         <label class="control-label col-sm-3">备注</label>
                         <div class="col-sm-9">
