--- a/auth-server/auth-server-web/src/main/webapp/WEB-INF/resources/view/role/resource.html
+++ b/auth-server/auth-server-web/src/main/webapp/WEB-INF/resources/view/role/resource.html
@@ -13,6 +13,7 @@
     <link href="/css/minified/components.min.css" rel="stylesheet" type="text/css">
     <link href="/css/minified/colors.min.css" rel="stylesheet" type="text/css">
     <link href="/css/bootstrap-table.css" rel="stylesheet" type="text/css">
+    <link href="/css/jstree.min.css" rel="stylesheet" type="text/css">
     <link href="/css/style.css" rel="stylesheet" type="text/css">
     <title>用户权限管理平台</title>
     <script src="/js/lib/jquery.min.js"></script>
@@ -21,10 +22,12 @@
     <script src="/js/lib/bootstrap.min.js"></script>
     <script src="/js/lib/x-editable.js"></script>
     <script src="/js/lib/bootstrap-table.min.js"></script>
+    <script src="/js/lib/bootstrap-table-mobile.js"></script>
     <script src="/js/lib/blockui.min.js"></script>
     <script src="/js/lib/bootbox.min.js"></script>
     <script src="/js/lib/sweet_alert.min.js"></script>
     <script src="/js/lib/select2.min.js"></script>
+    <script src="/js/lib/jstree.js"></script>
     <script src="/js/common.js"></script>
     <script src="/js/service/resource.js"></script>
 </head>
@@ -145,6 +148,13 @@
                     </div>
 
                     <div class="form-group">
+                        <label class="control-label col-sm-3">资源图标</label>
+                        <div class="col-sm-9">
+                            <input type="text" id="resourceIcon" placeholder="资源图标" class="form-control">
+                        </div>
+                    </div>
+
+                    <div class="form-group">
                         <label class="control-label col-sm-3">资源类型</label>
                         <div class="col-sm-9">
                             <select class="select" id="type">
@@ -212,6 +222,13 @@
                         <label class="control-label col-sm-3">资源名称</label>
                         <div class="col-sm-9">
                             <input type="text" id="add-resourceName" placeholder="资源名称" class="form-control">
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        <label class="control-label col-sm-3">资源图标</label>
+                        <div class="col-sm-9">
+                            <input type="text" id="add-resourceIcon" placeholder="资源图标名称" class="form-control">
                         </div>
                     </div>
 
