--- a/auth-server/auth-server-web/src/main/webapp/WEB-INF/resources/view/user/auth.html
+++ b/auth-server/auth-server-web/src/main/webapp/WEB-INF/resources/view/user/auth.html
@@ -21,6 +21,7 @@
     <script src="/js/lib/bootstrap.min.js"></script>
     <script src="/js/lib/x-editable.js"></script>
     <script src="/js/lib/bootstrap-table.min.js"></script>
+    <script src="/js/lib/bootstrap-table-mobile.js"></script>
     <script src="/js/lib/blockui.min.js"></script>
     <script src="/js/lib/bootbox.min.js"></script>
     <script src="/js/lib/sweet_alert.min.js"></script>
